--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>Historical Events</h1>
+  <h2>This is a list of famous historical events:</h2>
   <ul id="events-list"></ul>
 
   <script>
