--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>hack-to-the-future</title>
 </head>
 <body>
+    <h2>This is my page. hahahaha</h2>
     <ul id="details">
         <!--Name, Date, People involved,location -->
         <li><strong>Name</strong>: D-Day</li>
