--- a/public/contact.html
+++ b/public/contact.html
@@ -4,40 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Historical Events Form</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body>
-   <!-- Main Form Container -->
-<div class="container">
-    <h1>Enter Historical Event Details</h1>
-    <form id="historical-event-form">
-        <label for="event-name">Event Name:</label>
-        <input type="text" id="event-name" name="event-name" required>
-
-        <label for="location">Location:</label>
-        <input type="text" id="location" name="location" required>
-
-        <label for="person-name">Historical Person:</label>
-        <input type="text" id="person-name" name="person-name">
-
-        <label for="start-date">Start Date:</label>
-        <input type="date" id="start-date" name="start-date">
-
-        <label for="end-date">End Date:</label>
-        <input type="date" id="end-date" name="end-date">
-
-        <label for="date-slider">Approximate Year:</label>
-        <input type="range" id="date-slider" name="date-slider" min="1500" max="2023" value="2000" step="1">
-        <span id="slider-value">2000</span>
-
-        <!-- Related Events Field (Added to avoid the error) -->
-        <label for="related-events">Related Events:</label>
-        <textarea id="related-events" name="related-events" rows="3"></textarea>
-
-        <button type="submit">Submit</button>
-    </form>
-</div>
-
 <!-- Contact Section and Animation Overlay unchanged -->
 
     <!-- Contact Section -->
@@ -69,7 +38,7 @@
 
     <!-- Animation Overlay -->
     <div id="animation-overlay" class="overlay">
-        <img src="/Users/andrewgonzalez/Documents/GitHub/hack-to-the-future/Images/Delorean2.png" alt="Delorean" class="delorean">
+        <img src="/img/Delorean2.png" alt="Delorean" class="delorean">
         <div class="fire-trail"></div>
     </div>
     
