--- a/public/countdown.html
+++ b/public/countdown.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retro Keypad Countdown</title>
+    <title>Vintage Time Circuit Countdown</title>
     <style>
         body {
             display: flex;
@@ -13,30 +13,34 @@
             margin: 0;
             background-color: #111;
             font-family: 'Courier New', Courier, monospace;
-            color: white;
             background-image: url('https://www.transparenttextures.com/patterns/black-twill.png'); /* Retro texture */
             overflow: hidden;
         }
 
-        .container {
-            text-align: center;
-            max-width: 1200px;
-            padding: 20px;
-            z-index: 1;
-            position: relative;
+        .main-container {
+            display: flex;
+            align-items: flex-start;
+            gap: 100px; /* Space between clocks and keypad */
+        }
+
+        .countdown-container {
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
         }
 
         .time-circuit {
             display: grid;
-            grid-template-columns: repeat(5, auto);
-            gap: 20px;
+            grid-template-columns: repeat(6, auto);
+            gap: 15px;
             align-items: center;
-            background: linear-gradient(145deg, #333, #000);
-            padding: 40px;
+            background: linear-gradient(145deg, #333, #111);
+            padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 0 30px rgba(0, 255, 255, 0.4), inset 0 0 10px #000;
-            margin-bottom: 20px;
-            border: 3px solid #ff6600;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.7), inset 0 0 10px #000;
+            border: 3px solid #444;
+            width: 650px;
+            position: relative;
         }
 
         .time-circuit div {
@@ -44,19 +48,19 @@
         }
 
         .label {
-            font-size: 1.2em;
+            font-size: 1em;
             color: #ff6600;
-            margin-bottom: 10px;
+            margin-bottom: 5px;
             text-shadow: 0 0 5px #ff0000;
         }
 
         .display {
-            font-size: 4em;
+            font-size: 2.5em;
             background-color: #222;
-            padding: 20px;
+            padding: 10px;
             border-radius: 5px;
             box-shadow: inset 0 0 15px #000, 0 0 10px #ff6600;
-            width: 160px;
+            width: 100px;
             font-family: 'Digital-7 Mono', monospace;
         }
 
@@ -64,19 +68,49 @@
         .display.green { color: #00ff00; }
         .display.yellow { color: #ffff00; }
 
+        .am-pm-lights {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 5px;
+            margin-left: 10px;
+        }
+
+        .am-light, .pm-light {
+            width: 15px;
+            height: 15px;
+            border-radius: 50%;
+            background-color: #444;
+            box-shadow: 0 0 5px #000;
+        }
+
+        .am-light.active { background-color: #00ff00; }
+        .pm-light.active { background-color: #ff0000; }
+
+        .time-label {
+            position: absolute;
+            bottom: -25px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 1em;
+            background-color: black;
+            padding: 2px 8px;
+            border-radius: 5px;
+            color: #ff6600;
+            box-shadow: 0 0 10px #000;
+            text-shadow: 0 0 5px #ff0000;
+        }
+
         .keypad-container {
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-top: 20px;
             background-color: #3b3b3b;
             padding: 20px;
             border-radius: 10px;
             border: 3px solid #444;
             box-shadow: 0 0 20px #000;
-            width: 200px;
-            margin-left: auto;
-            margin-right: auto;
+            width: 220px;
         }
 
         .indicator-lights {
@@ -100,13 +134,13 @@
 
         .keypad {
             display: grid;
-            grid-template-columns: repeat(3, 50px);
+            grid-template-columns: repeat(3, 60px);
             gap: 10px;
         }
 
         .key {
-            width: 50px;
-            height: 50px;
+            width: 60px;
+            height: 60px;
             background-color: #444;
             border: 2px solid #777;
             border-radius: 5px;
@@ -167,34 +201,98 @@
 </head>
 <body>
 
-<div class="container">
-    <h1 style="color: #ff6600; text-shadow: 0 0 8px #ff0000;">Back to the Future Countdown</h1>
+<div class="main-container">
+    <!-- Countdown Clocks -->
+    <div class="countdown-container">
+        <!-- Destination Time -->
+        <div class="time-circuit" id="destination-time">
+            <div>
+                <div class="label">MONTH</div>
+                <div class="display red" id="dest-month">NOV</div>
+            </div>
+            <div>
+                <div class="label">DAY</div>
+                <div class="display red" id="dest-day">05</div>
+            </div>
+            <div>
+                <div class="label">YEAR</div>
+                <div class="display red" id="dest-year">1955</div>
+            </div>
+            <div>
+                <div class="label">HOUR</div>
+                <div class="display red" id="dest-hour">01</div>
+            </div>
+            <div>
+                <div class="label">MIN</div>
+                <div class="display red" id="dest-minute">22</div>
+            </div>
+            <div class="am-pm-lights">
+                <div class="am-light" id="dest-am-light"></div>
+                <div class="pm-light" id="dest-pm-light"></div>
+            </div>
+            <div class="time-label">DESTINATION TIME</div>
+        </div>
 
-    <!-- Time Circuit Displays -->
-    <div class="time-circuit">
-        <div>
-            <div class="label">YEAR</div>
-            <div class="display red" id="year">1985</div>
+        <!-- Present Time -->
+        <div class="time-circuit" id="present-time">
+            <div>
+                <div class="label">MONTH</div>
+                <div class="display green" id="present-month">OCT</div>
+            </div>
+            <div>
+                <div class="label">DAY</div>
+                <div class="display green" id="present-day">26</div>
+            </div>
+            <div>
+                <div class="label">YEAR</div>
+                <div class="display green" id="present-year">1985</div>
+            </div>
+            <div>
+                <div class="label">HOUR</div>
+                <div class="display green" id="present-hour">01</div>
+            </div>
+            <div>
+                <div class="label">MIN</div>
+                <div class="display green" id="present-minute">22</div>
+            </div>
+            <div class="am-pm-lights">
+                <div class="am-light" id="present-am-light"></div>
+                <div class="pm-light" id="present-pm-light"></div>
+            </div>
+            <div class="time-label">PRESENT TIME</div>
         </div>
-        <div>
-            <div class="label">MONTH</div>
-            <div class="display red" id="month">10</div>
-        </div>
-        <div>
-            <div class="label">DAY</div>
-            <div class="display red" id="day">26</div>
-        </div>
-        <div>
-            <div class="label">HOUR</div>
-            <div class="display red" id="hour">01</div>
-        </div>
-        <div>
-            <div class="label">MIN</div>
-            <div class="display red" id="minute">21</div>
+
+        <!-- Last Time Departed -->
+        <div class="time-circuit" id="last-time">
+            <div>
+                <div class="label">MONTH</div>
+                <div class="display yellow" id="last-month">OCT</div>
+            </div>
+            <div>
+                <div class="label">DAY</div>
+                <div class="display yellow" id="last-day">26</div>
+            </div>
+            <div>
+                <div class="label">YEAR</div>
+                <div class="display yellow" id="last-year">1985</div>
+            </div>
+            <div>
+                <div class="label">HOUR</div>
+                <div class="display yellow" id="last-hour">01</div>
+            </div>
+            <div>
+                <div class="label">MIN</div>
+                <div class="display yellow" id="last-minute">20</div>
+            </div>
+            <div class="am-pm-lights">
+                <div class="am-light" id="last-am-light"></div>
+                <div class="pm-light" id="last-pm-light"></div>
+            </div>
+            <div class="time-label">LAST TIME DEPARTED</div>
         </div>
     </div>
 
-    <!-- Keypad Container -->
+    <!-- Keypad -->
     <div class="keypad-container">
         <div class="indicator-lights">
             <div class="indicator-light red"></div>
@@ -215,18 +313,19 @@
             <div class="key" onclick="backspace()">⌫</div>
             <div class="key" onclick="clearInput()">C</div>
         </div>
+        <button class="back-button" onclick="triggerGifEffect()">Set Countdown</button>
     </div>
-    <button class="back-button" onclick="triggerGifEffect()">Set Countdown</button>
 </div>
 
 <!-- GIF Overlay for Transition -->
 <div class="gif-overlay" id="gifOverlay">
-    <img src="C:\Users\12109\Downloads\DeLorean Flames.gif" alt="Time Travel Transition" id="timeTravelGif">
+    <img src="DeLorean Flames.gif" alt="Time Travel Transition" id="timeTravelGif">
 </div>
 
 <script>
     let inputValues = ['', '', '', '', '']; // [year, month, day, hour, minute]
     let currentIndex = 0;
+    let lastTimeDeparted = { year: '', month: '', day: '', hour: '', minute: '', amPm: 'AM' };
 
     function insertNumber(num) {
         if (currentIndex < inputValues.length) {
@@ -262,46 +361,11 @@
 
     function updateDisplay() {
         const [year, month, day, hour, minute] = inputValues;
-        document.getElementById("year").textContent = year || "1985";
-        document.getElementById("month").textContent = month || "10";
-        document.getElementById("day").textContent = day || "26";
-        document.getElementById("hour").textContent = hour || "01";
-        document.getElementById("minute").textContent = minute || "21";
-    }
-
-    function startCountdown() {
-        const [year, month, day, hour, minute] = inputValues;
-
-        if (!year || !month || !day || !hour || !minute) {
-            alert("Please complete all fields in the format YYYY-MM-DD-HH-MM");
-            return;
-        }
-
-        const targetDate = new Date(year, month - 1, day, hour, minute);
-
-        if (isNaN(targetDate.getTime())) {
-            alert("Invalid date. Please check your input.");
-            return;
-        }
-
-        const interval = setInterval(function() {
-            const now = new Date().getTime();
-            const distance = targetDate - now;
-
-            const days = Math.floor(distance / (1000 * 60 * 60 * 24));
-            const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-            const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-            const seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-            document.getElementById("day").textContent = String(days).padStart(2, '0');
-            document.getElementById("hour").textContent = String(hours).padStart(2, '0');
-            document.getElementById("minute").textContent = String(minutes).padStart(2, '0');
-
-            if (distance < 0) {
-                clearInterval(interval);
-                alert("Time Travel Complete!");
-            }
-        }, 1000);
+        document.getElementById("dest-year").textContent = year || "1955";
+        document.getElementById("dest-month").textContent = month || "NOV";
+        document.getElementById("dest-day").textContent = day || "05";
+        document.getElementById("dest-hour").textContent = hour || "01";
+        document.getElementById("dest-minute").textContent = minute || "22";
     }
 
     function triggerGifEffect() {
@@ -317,9 +381,47 @@
         // Wait for the GIF duration before starting the countdown
         setTimeout(() => {
             gifOverlay.style.display = "none";
-            startCountdown();
-        }, 3000); // Adjust the duration (5000ms) based on your GIF's length
+            storeLastTimeDeparted();
+        }, 5000); // Adjust the duration (5000ms) based on your GIF's length
     }
+
+    function storeLastTimeDeparted() {
+        const [year, month, day, hour, minute] = inputValues;
+        lastTimeDeparted.year = year;
+        lastTimeDeparted.month = month;
+        lastTimeDeparted.day = day;
+        lastTimeDeparted.hour = hour;
+        lastTimeDeparted.minute = minute;
+
+        // Update the last time departed display
+        document.getElementById("last-year").textContent = lastTimeDeparted.year || "1985";
+        document.getElementById("last-month").textContent = lastTimeDeparted.month || "OCT";
+        document.getElementById("last-day").textContent = lastTimeDeparted.day || "26";
+        document.getElementById("last-hour").textContent = lastTimeDeparted.hour || "01";
+        document.getElementById("last-minute").textContent = lastTimeDeparted.minute || "20";
+    }
+
+    function updatePresentTime() {
+        const now = new Date();
+        const year = now.getFullYear();
+        const month = now.toLocaleString('default', { month: 'short' }).toUpperCase();
+        const day = String(now.getDate()).padStart(2, '0');
+        const hour = String(now.getHours() % 12 || 12).padStart(2, '0');
+        const minute = String(now.getMinutes()).padStart(2, '0');
+        const isAM = now.getHours() < 12;
+
+        document.getElementById("present-year").textContent = year;
+        document.getElementById("present-month").textContent = month;
+        document.getElementById("present-day").textContent = day;
+        document.getElementById("present-hour").textContent = hour;
+        document.getElementById("present-minute").textContent = minute;
+
+        // Update AM/PM light
+        document.getElementById("present-am-light").classList.toggle("active", isAM);
+        document.getElementById("present-pm-light").classList.toggle("active", !isAM);
+    }
+
+    setInterval(updatePresentTime, 1000); // Update present time every second
 </script>
 
 </body>
