--- a/dDay.html
+++ b/dDay.html
@@ -15,7 +15,7 @@
             <p class="location">Location: Normandy, France</p>
         </header>
         
-        <section class="image-section">
+        <section class="Screenshot 2024-10-26 170404.png">
             <img src="Screenshot 2024-10-26 170404.png" alt="D-Day landing" class="d-day-image">
         </section>
         
