--- a/public/countdown.html
+++ b/public/countdown.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vintage Time Circuit Countdown</title>
     <style>
+        @font-face {
+            font-family: 'Digital-7';
+            src: url('images/digital-7.ttf') format('truetype');
+        }
         body {
+            font-family: 'Digital-7', sans-serif;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -13,14 +18,14 @@
             margin: 0;
             background-color: #111;
             font-family: 'Courier New', Courier, monospace;
-            background-image: url('https://www.transparenttextures.com/patterns/black-twill.png'); /* Retro texture */
+            background-image: url('https://www.transparenttextures.com/patterns/black-twill.png');
             overflow: hidden;
         }
 
         .main-container {
             display: flex;
             align-items: flex-start;
-            gap: 100px; /* Space between clocks and keypad */
+            gap: 100px;
         }
 
         .countdown-container {
@@ -31,15 +36,15 @@
 
         .time-circuit {
             display: grid;
-            grid-template-columns: repeat(6, auto);
+            grid-template-columns: repeat(9, auto);
             gap: 15px;
             align-items: center;
-            background: linear-gradient(145deg, #333, #111);
+            background: url('https://www.transparenttextures.com/patterns/brushed-alum.png');
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.7), inset 0 0 10px #000;
-            border: 3px solid #444;
-            width: 650px;
+            border: 10px solid #555;
+            box-shadow: 0 0 10px rgba(35, 34, 34, 0.7), inset 0 0 10px #212020;
+            width: 950px;
             position: relative;
         }
 
@@ -48,32 +53,44 @@
         }
 
         .label {
+            width: 110px;
             font-size: 1em;
-            color: #ff6600;
-            margin-bottom: 5px;
-            text-shadow: 0 0 5px #ff0000;
+            color: rgb(249, 248, 248);
+            margin-bottom: 10px;
+            background-color: #660000;
+            padding: 5px 5px;
+            border-radius: 3px;
         }
 
         .display {
             font-size: 2.5em;
-            background-color: #222;
+            background-color: #333;
             padding: 10px;
             border-radius: 5px;
             box-shadow: inset 0 0 15px #000, 0 0 10px #ff6600;
             width: 100px;
             font-family: 'Digital-7 Mono', monospace;
+            color: white;
         }
 
         .display.red { color: #ff3300; }
         .display.green { color: #00ff00; }
         .display.yellow { color: #ffff00; }
 
-        .am-pm-lights {
+        .am-pm-container {
             display: flex;
             flex-direction: column;
             align-items: center;
             gap: 5px;
             margin-left: 10px;
+        }
+
+        .am-pm-label {
+            font-size: 0.8em;
+            color: white;
+            background-color: #660000;
+            padding: 2px 5px;
+            border-radius: 3px;
         }
 
         .am-light, .pm-light {
@@ -88,27 +105,34 @@
         .pm-light.active { background-color: #ff0000; }
 
         .time-label {
-            position: absolute;
-            bottom: -25px;
-            left: 50%;
-            transform: translateX(-50%);
-            font-size: 1em;
-            background-color: black;
-            padding: 2px 8px;
+            font-size: 1.2em;
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 5px 15px;
             border-radius: 5px;
-            color: #ff6600;
-            box-shadow: 0 0 10px #000;
-            text-shadow: 0 0 5px #ff0000;
+            margin-top: 10px;
+            grid-column: span 9;
+            text-align: center;
+        }
+
+        .colon {
+            font-size: 3.5em; /* Make the colon larger */
+            color: white;
+            padding: 0 10px;
+            display: flex;
+            justify-content: center;
+            align-items: flex-end; /* Align the colon vertically to the bottom */
+            margin-top: 30px; /* Adjust the spacing below */
         }
 
         .keypad-container {
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #3b3b3b;
+            background: url('https://www.transparenttextures.com/patterns/brushed-alum.png');
             padding: 20px;
             border-radius: 10px;
-            border: 3px solid #444;
+            border: 3px solid #555;
             box-shadow: 0 0 20px #000;
             width: 220px;
         }
@@ -202,13 +226,12 @@
 <body>
 
 <div class="main-container">
-    <!-- Countdown Clocks -->
     <div class="countdown-container">
         <!-- Destination Time -->
         <div class="time-circuit" id="destination-time">
             <div>
                 <div class="label">MONTH</div>
-                <div class="display red" id="dest-month">NOV</div>
+                <div class="display red" id="dest-month">11</div>
             </div>
             <div>
                 <div class="label">DAY</div>
@@ -218,17 +241,20 @@
                 <div class="label">YEAR</div>
                 <div class="display red" id="dest-year">1955</div>
             </div>
+            <div class="am-pm-container">
+                <div class="am-pm-label">AM</div>
+                <div class="am-light" id="dest-am-light" onclick="setAm('dest')"></div>
+                <div class="am-pm-label">PM</div>
+                <div class="pm-light" id="dest-pm-light" onclick="setPm('dest')"></div>
+            </div>
             <div>
                 <div class="label">HOUR</div>
                 <div class="display red" id="dest-hour">01</div>
             </div>
+            <div class="colon">:</div>
             <div>
                 <div class="label">MIN</div>
                 <div class="display red" id="dest-minute">22</div>
-            </div>
-            <div class="am-pm-lights">
-                <div class="am-light" id="dest-am-light"></div>
-                <div class="pm-light" id="dest-pm-light"></div>
             </div>
             <div class="time-label">DESTINATION TIME</div>
         </div>
@@ -237,7 +263,7 @@
         <div class="time-circuit" id="present-time">
             <div>
                 <div class="label">MONTH</div>
-                <div class="display green" id="present-month">OCT</div>
+                <div class="display green" id="present-month">10</div>
             </div>
             <div>
                 <div class="label">DAY</div>
@@ -247,17 +273,20 @@
                 <div class="label">YEAR</div>
                 <div class="display green" id="present-year">1985</div>
             </div>
+            <div class="am-pm-container">
+                <div class="am-pm-label">AM</div>
+                <div class="am-light" id="present-am-light"></div>
+                <div class="am-pm-label">PM</div>
+                <div class="pm-light" id="present-pm-light"></div>
+            </div>
             <div>
                 <div class="label">HOUR</div>
                 <div class="display green" id="present-hour">01</div>
             </div>
+            <div class="colon">:</div>
             <div>
                 <div class="label">MIN</div>
                 <div class="display green" id="present-minute">22</div>
-            </div>
-            <div class="am-pm-lights">
-                <div class="am-light" id="present-am-light"></div>
-                <div class="pm-light" id="present-pm-light"></div>
             </div>
             <div class="time-label">PRESENT TIME</div>
         </div>
@@ -266,7 +295,7 @@
         <div class="time-circuit" id="last-time">
             <div>
                 <div class="label">MONTH</div>
-                <div class="display yellow" id="last-month">OCT</div>
+                <div class="display yellow" id="last-month">10</div>
             </div>
             <div>
                 <div class="label">DAY</div>
@@ -276,17 +305,20 @@
                 <div class="label">YEAR</div>
                 <div class="display yellow" id="last-year">1985</div>
             </div>
+            <div class="am-pm-container">
+                <div class="am-pm-label">AM</div>
+                <div class="am-light" id="last-am-light"></div>
+                <div class="am-pm-label">PM</div>
+                <div class="pm-light" id="last-pm-light"></div>
+            </div>
             <div>
                 <div class="label">HOUR</div>
                 <div class="display yellow" id="last-hour">01</div>
             </div>
+            <div class="colon">:</div>
             <div>
                 <div class="label">MIN</div>
                 <div class="display yellow" id="last-minute">20</div>
-            </div>
-            <div class="am-pm-lights">
-                <div class="am-light" id="last-am-light"></div>
-                <div class="pm-light" id="last-pm-light"></div>
             </div>
             <div class="time-label">LAST TIME DEPARTED</div>
         </div>
@@ -323,12 +355,11 @@
 </div>
 
 <script>
-    let inputValues = ['', '', '', '', '']; // [year, month, day, hour, minute]
+    let inputValues = ['', '', '', '', '', 'AM'];
     let currentIndex = 0;
-    let lastTimeDeparted = { year: '', month: '', day: '', hour: '', minute: '', amPm: 'AM' };
 
     function insertNumber(num) {
-        if (currentIndex < inputValues.length) {
+        if (currentIndex < inputValues.length - 1) {
             inputValues[currentIndex] += num;
             updateDisplay();
             
@@ -339,7 +370,7 @@
     }
 
     function checkFieldComplete(index) {
-        const lengths = [4, 2, 2, 2, 2];
+        const lengths = [2, 2, 4, 2, 2];
         return inputValues[index].length === lengths[index];
     }
 
@@ -354,18 +385,34 @@
     }
 
     function clearInput() {
-        inputValues = ['', '', '', '', ''];
+        inputValues = ['', '', '', '', '', 'AM'];
         currentIndex = 0;
         updateDisplay();
     }
 
     function updateDisplay() {
-        const [year, month, day, hour, minute] = inputValues;
+        const [month, day, year, hour, minute, amPm] = inputValues;
         document.getElementById("dest-year").textContent = year || "1955";
-        document.getElementById("dest-month").textContent = month || "NOV";
+        document.getElementById("dest-month").textContent = month || "11";
         document.getElementById("dest-day").textContent = day || "05";
         document.getElementById("dest-hour").textContent = hour || "01";
         document.getElementById("dest-minute").textContent = minute || "22";
+        updateAmPmLight('dest', amPm);
+    }
+
+    function updateAmPmLight(clock, amPm) {
+        document.getElementById(`${clock}-am-light`).classList.toggle("active", amPm === "AM");
+        document.getElementById(`${clock}-pm-light`).classList.toggle("active", amPm === "PM");
+    }
+
+    function setAm(clock) {
+        inputValues[5] = "AM";
+        updateAmPmLight(clock, "AM");
+    }
+
+    function setPm(clock) {
+        inputValues[5] = "PM";
+        updateAmPmLight(clock, "PM");
     }
 
     function triggerGifEffect() {
@@ -378,50 +425,31 @@
         // Show the GIF overlay
         gifOverlay.style.display = "flex";
         
-        // Wait for the GIF duration before starting the countdown
         setTimeout(() => {
             gifOverlay.style.display = "none";
             storeLastTimeDeparted();
-        }, 5000); // Adjust the duration (5000ms) based on your GIF's length
+        }, 5000); // Adjust based on GIF length
     }
 
     function storeLastTimeDeparted() {
-        const [year, month, day, hour, minute] = inputValues;
-        lastTimeDeparted.year = year;
-        lastTimeDeparted.month = month;
-        lastTimeDeparted.day = day;
-        lastTimeDeparted.hour = hour;
-        lastTimeDeparted.minute = minute;
-
-        // Update the last time departed display
-        document.getElementById("last-year").textContent = lastTimeDeparted.year || "1985";
-        document.getElementById("last-month").textContent = lastTimeDeparted.month || "OCT";
-        document.getElementById("last-day").textContent = lastTimeDeparted.day || "26";
-        document.getElementById("last-hour").textContent = lastTimeDeparted.hour || "01";
-        document.getElementById("last-minute").textContent = lastTimeDeparted.minute || "20";
+        const [month, day, year, hour, minute, amPm] = inputValues;
+        document.getElementById("last-year").textContent = year || "1955";
+        document.getElementById("last-month").textContent = month || "11";
+        document.getElementById("last-day").textContent = day || "05";
+        document.getElementById("last-hour").textContent = hour || "01";
+        document.getElementById("last-minute").textContent = minute || "22";
+        updateAmPmLight('last', amPm);
     }
 
-    function updatePresentTime() {
+    setInterval(() => {
         const now = new Date();
-        const year = now.getFullYear();
-        const month = now.toLocaleString('default', { month: 'short' }).toUpperCase();
-        const day = String(now.getDate()).padStart(2, '0');
-        const hour = String(now.getHours() % 12 || 12).padStart(2, '0');
-        const minute = String(now.getMinutes()).padStart(2, '0');
-        const isAM = now.getHours() < 12;
-
-        document.getElementById("present-year").textContent = year;
-        document.getElementById("present-month").textContent = month;
-        document.getElementById("present-day").textContent = day;
-        document.getElementById("present-hour").textContent = hour;
-        document.getElementById("present-minute").textContent = minute;
-
-        // Update AM/PM light
-        document.getElementById("present-am-light").classList.toggle("active", isAM);
-        document.getElementById("present-pm-light").classList.toggle("active", !isAM);
-    }
-
-    setInterval(updatePresentTime, 1000); // Update present time every second
+        document.getElementById("present-year").textContent = now.getFullYear();
+        document.getElementById("present-month").textContent = String(now.getMonth() + 1).padStart(2, '0');
+        document.getElementById("present-day").textContent = String(now.getDate()).padStart(2, '0');
+        document.getElementById("present-hour").textContent = String(now.getHours() % 12 || 12).padStart(2, '0');
+        document.getElementById("present-minute").textContent = String(now.getMinutes()).padStart(2, '0');
+        updateAmPmLight('present', now.getHours() < 12 ? 'AM' : 'PM');
+    }, 1000);
 </script>
 
 </body>
