Clock Digits pt-2
Tried displaying numbers as clock digits

--- a/public/countdown.html
+++ b/public/countdown.html
@@ -7,7 +7,7 @@
     <style>
         @font-face {
             font-family: 'Digital-7';
-            src: url('images/digital-7.ttf') format('truetype');
+            src: url('Images/digital-7.ttf') format('truetype');
         }
         body {
             font-family: 'Digital-7', sans-serif;
