--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
 <!-- GIF Overlay for Transition -->
 <div class="gif-overlay" id="gifOverlay">
-    <img src="DeLorean Flames.gif" alt="Time Travel Transition" id="timeTravelGif">
+    <img src="img/delorean-flames.gif" alt="Time Travel Transition" id="timeTravelGif">
 </div>
 
 <script>
