--- a/event-details.html
+++ b/event-details.html
@@ -7,6 +7,9 @@
 <body>
     <div id="event-container">
         <h1>Event Details</h1>
+
+        <p>this is a test</p>
+
         <p><strong>Event Name:</strong> <span id="event-name"></span></p>
         <p><strong>Location:</strong> <span id="event-location"></span></p>
         <p><strong>Historical Figures:</strong> <span id="event-figures"></span></p>
