--- a/event-details.html
+++ b/event-details.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Event Details</title>
+    <link rel="stylesheet" href="/assets/css/app.css">
 </head>
 <body>
     <div id="event-container">
