--- a/event-details.html
+++ b/event-details.html
@@ -5,7 +5,7 @@
     <title>Event Details</title>
     <link rel="stylesheet" href="/assets/css/app.css">
 </head>
-<body>
+<body class="layout-body">
     <div id="event-container">
         <h1>Event Details</h1>
 
