--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>TimeBridge</title>
     <link rel="stylesheet" href="/assets/css/app.css">
 </head>
-<body>
+<body class="body">
 
 <div class="main-container">
     <div class="countdown-container">
