--- a/public/berlin-wall.html
+++ b/public/berlin-wall.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fall of the Berlin Wall</title>
+    <link rel="stylesheet" href="/assets/css/app.css">
     <style>
         body {
             font-family: Arial, sans-serif;
