--- a/public/declaration-of-independence.html
+++ b/public/declaration-of-independence.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Declaration of Independence</title>
-    <link rel="stylesheet" href="assets/css/app.css">
+    <link rel="stylesheet" href="/assets/css/app.css">
 </head>
 <body>
     <div class="scroll">
@@ -94,5 +94,7 @@
             <div class="signer">Benjamin Franklin</div>
         </div>
     </div>
+
+    <script src="/assets/server.js"></script>
 </body>
 </html>
